# sap_multiagent_tool

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml
dashboard/: index.html  package-lock.json  package.json
dashboard/public/toolgen-data/: bundle.json
dashboard/src/: App.tsx  main.tsx  styles.css
data/toolenv/tools/Commerce/: payment_api.json  product_api.json
data/toolenv/tools/Food/: event_api.json  restaurant_api.json
data/toolenv/tools/Productivity/: calendar_api.json  contact_api.json
data/toolenv/tools/Travel/: flight_api.json  hotel_api.json
output/artifacts/: endpoints.md  graph_edges.md  graph_stats.md  registry_stats.md
scripts/: download_toolbench.py  download_toolbench.sh  export_dashboard_data.py
src/toolgen/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/toolgen/agents/: assistant.py  llm_client.py  orchestrator.py  planner.py  user_sim.py
src/toolgen/executor/: mock_executor.py
src/toolgen/graph/: builder.py  sampler.py
src/toolgen/judge/: scorer.py
src/toolgen/memory/: steering.py
src/toolgen/registry/: loader.py  registry.py
src/toolgen/repair/: repairer.py
tests/: conftest.py  test_assistant.py  test_download_toolbench.py  test_executor.py  test_graph.py  test_hybrid_live.py  test_judge.py  test_loader.py  test_model_routing.py  test_models.py  test_pipeline.py  test_repair.py  test_steering.py
